# bods-stream

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  render.yaml
backend/: .env.example  pyproject.toml  sample_psc_stream.jsonl
backend/app/: broadcast.py  companies.py  lifecycle.py  main.py  privacy.py  prolific.py  replay.py  risk.py  status.py  stream.py
backend/tests/: test_lifecycle.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: BovsDiagram.tsx  EventCard.tsx  InsightBar.tsx  LifecycleBadge.tsx  NationalityBar.tsx  RiskBox.tsx
frontend/src/lib/: eventView.ts  nationalities.ts  stats.ts  useSSE.ts
