[project]
name = "bods-stream-backend"
version = "0.1.0"
description = "FastAPI SSE relay mapping the Companies House PSC stream to BODS v0.4"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
    "bods-mapper",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

# Shared mapping package — git source so deployment can build from this repo
# alone. For local bods-mapper editing: `uv pip install -e ../../bods-mapper`.
[tool.uv.sources]
bods-mapper = { git = "https://github.com/StephenAbbott/bods-mapper.git" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
